[gd_scene load_steps=2 format=3 uid="uid://050qxin8vipq"]

[ext_resource type="Script" uid="uid://nr6ilef7d8ph" path="res://ui/hud_ui.gd" id="1_1stoi"]

[node name="HudUI" type="CanvasLayer"]
script = ExtResource("1_1stoi")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="TimePanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TimePanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="TimeLabel" type="Label" parent="MarginContainer/TimePanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0:00"

[node name="ExperienceVContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ExperienceVContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LevelLabel" type="Label" parent="MarginContainer/ExperienceVContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "1"

[node name="ExperienceLabel" type="Label" parent="MarginContainer/ExperienceVContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.74902)
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "0 / 0"

[node name="ExperienceProgress" type="ProgressBar" parent="MarginContainer/ExperienceVContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 12)
layout_mode = 2
max_value = 1.0
value = 0.25
show_percentage = false
